<resources>
    <string name="app_name">Video Trimmer Demo</string>
    <string name="txt_gallery">Open Gallery</string>
    <string name="txt_take_camera">Take Camera</string>
    <string name="txt_select_video">Select video</string>
    <string name="hint_min_gap">Enter min duration(in secs)</string>
    <string name="hint_min_max">Min duration(in secs)</string>
    <string name="txt_min_max">Selet video-minGap to maxgap trim</string>
    <string name="txt_option">Options</string>
    <string name="txt_max_duration_secs">Max duration(in secs)</string>
    <string name="txt_enter_fixed_trim_duration_in_secs">Enter fixed trim duration(in secs)</string>
    <string name="txt_empty" />
    <string name="txt_done">Done</string>
    <string name="txt_title_not_supported">Alert!</string>
    <string name="txt_msg_not_supported">Sorry, this device is not supported</string>
    <string name="txt_trimming_video">Processing Video…</string>
    <string name="txt_failed_to_trim">Failed to trim</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txt_dlah">\\</string>
    <string name="txt_smaller">Video should be smaller than</string>
    <string name="edit_video">Edit Video</string>
    <string name="txt_compress_video">Compressing Video…</string>
    <string name="txt_edt_video">Edit Video</string>
</resources>