<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.videotrimmer.videotrimmerdemo.MainActivity">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nested_view">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <VideoView
                    android:id="@+id/video_view"
                    android:layout_width="match_parent"
                    android:layout_height="300dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="12dp">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_default_trim"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textSize="15sp"
                        android:text="Selet video-default trim" />

                    <EditText
                        android:id="@+id/edt_fixed_gap"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:inputType="number"
                        android:maxLength="10"
                        android:padding="12dp"
                        android:textSize="18sp"
                        android:hint="@string/txt_enter_fixed_trim_duration_in_secs" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_fixed_gap"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textSize="15sp"
                        android:text="Selet video-fixedgap trim" />


                    <EditText
                        android:id="@+id/edt_min_gap"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:inputType="number"
                        android:maxLength="10"
                        android:padding="12dp"
                        android:textSize="18sp"
                        android:hint="@string/hint_min_gap" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_min_gap"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textSize="15sp"
                        android:text="Selet video-minGap trim" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/edt_min_from"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:inputType="number"
                            android:maxLength="10"
                            android:padding="12dp"
                            android:textSize="18sp"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:hint="@string/hint_min_max" />

                        <EditText
                            android:id="@+id/edt_max_to"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:inputType="number"
                            android:maxLength="10"
                            android:padding="12dp"
                            android:textSize="18sp"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:hint="@string/txt_max_duration_secs" />
                    </LinearLayout>


                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_min_max_gap"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textSize="15sp"
                        android:layout_marginBottom="15dp"
                        android:text="@string/txt_min_max" />

                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</layout>